--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -89,6 +89,7 @@ outputs:
     test:
       commands:
         - airflow initdb
+        - test -f $STDLIB_DIR/airflow/www_rbac/static/dist/manifest.json
       imports:
         - airflow
         - airflow.api
