--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,14 +48,14 @@ outputs:
         - flask-appbuilder >=2.2,<2.3  # [py>=36]
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
-        - flask-swagger 0.2.13
+        - flask-swagger 0.2.13,<0.3
         - flask-wtf >=0.14.2,<0.15
         - funcsigs >=1.0.0,<2.0.0
         - future >=0.16.0,<0.19
         - python-graphviz >=0.12
-        - gunicorn >=19.5.0,<20.0
+        - gunicorn >=19.5.0,<21.0
         - iso8601 >=0.1.12
-        - jinja2 >=2.10.1,<2.11.0
+        - jinja2 >=2.10.1,<2.12.0
         - json-merge-patch 0.2
         - jsonschema >=3.0.0,<3.1.0  # [py<38]
         # Earlier versions were not build with py38, so this is newer than upstream spec
@@ -389,21 +389,21 @@ outputs:
  #     run:
  #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
  #       - pyopenssl
- #       - google-api-python-client >=1.6.0,<2.0.0dev
- #       - google-auth >=1.0.0,<2.0.0dev
+ #       - google-api-python-client >=1.6.0,<2.0.0
+ #       - google-auth >=1.0.0,<2.0.0
  #       - google-auth-httplib2 >=0.0.1
- #       - google-cloud-bigtable >=1.0.0
- #       - google-cloud-container >=0.1.1
- #       - google-cloud-dlp >=0.11.0
- #       - google-cloud-language >=1.1.1
- #       - google-cloud-secret-manager >=0.2.0
- #       - google-cloud-spanner >=1.10.0
- #       - google-cloud-speech >=0.36.3
- #       - google-cloud-storage >=1.16
+ #       - google-cloud-bigtable >=1.0.0,<2.0.0
+ #       - google-cloud-container >=0.1.1,<2.0.0
+ #       - google-cloud-dlp >=0.11.0,<2.0.0
+ #       - google-cloud-language >=1.1.1,<2.0.0
+ #       - google-cloud-secret-manager >=0.2.0,<2.0.0
+ #       - google-cloud-spanner >=1.10.0,<2.0.0
+ #       - google-cloud-speech >=0.36.3,<2.0.0
+ #       - google-cloud-storage >=1.16,<2.0.0
  #       - google-cloud-texttospeech >=0.4.0,<2
- #       - google-cloud-translate >=1.3.3
- #       - google-cloud-videointelligence >=1.7.0
- #       - google-cloud-vision >=0.35.2
+ #       - google-cloud-translate >=1.3.3,<2.0.0
+ #       - google-cloud-videointelligence >=1.7.0,<2.0.0
+ #       - google-cloud-vision >=0.35.2,<2.0.0
  #       - grpcio-gcp >=0.2.2
  #       - pandas-gbq
 
@@ -531,7 +531,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - pymongo >=3.6.0
+        - pymongo >=3.6.0,<3.11.0
         - dnspython >=1.13.0,<2.0.0
     test:
       imports:
@@ -568,8 +568,8 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - cx_oracle >=5.1.2,<8.0.0  # py<30
-        - cx_oracle >=5.1.2  # py>=30
+        - cx_oracle >=5.1.2,<8.0.0  # [py<30]
+        - cx_oracle >=5.1.2  # [py>=30]
     test:
       imports:
         - airflow
@@ -592,6 +592,8 @@ outputs:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - papermill[all] >=1.0.0
         - nteract-scrapbook[all] >=0.2.1
+        - pyarrow <1.0.0
+        - fsspec <0.8.0  # [py35]
     test:
       imports:
         - airflow
