--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [win or py<35]
-  number: 0
+  number: 1
 
 test:
   commands:
@@ -239,9 +239,10 @@ outputs:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - celery >=4.3.0,<4.4.0
+        - vine >=1.3.0,<5.0.0
         - flower >=0.7.3,<1.0
         - tornado >=4.2.0,<6.0
-        - kombu ==4.6.3  # [py<30]
+        - kombu 4.6.3  # [py<30]
     test:
       imports:
         - airflow
