Remove pep562 dependency -- not on conda-forge yet

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,8 @@ outputs:
         - packaging
         - pandas >=0.17.1,<2.0.0
         - pendulum 1.4.4
-        - pep562 >=1.0,<2.0  # [py<37]
+        # not available on conda-forge yet
+        # - pep562 >=1.0,<2.0  # [py<37]
         - psutil >=4.2.0,<6.0.0
         - pygments >=2.0.1,<3.0
         - python-daemon >=2.1.1
