Add python in host to all airflow-with*
This is needed to include python in build string

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -167,6 +167,8 @@ outputs:
 
   - name: {{ name }}-with-aws
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -183,6 +185,8 @@ outputs:
 
   - name: {{ name }}-with-azure_blob_storage
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -198,6 +202,8 @@ outputs:
 
   - name: {{ name }}-with-azure_data_lake
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -212,6 +218,8 @@ outputs:
 
   - name: {{ name }}-with-azure_cosmos
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -225,6 +233,8 @@ outputs:
   # Note: no azure-mgmt-containerinstance feedstock
   #- name: {{ name }}-with-azure-mgmt-containerinstance
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -236,6 +246,8 @@ outputs:
 
   - name: {{ name }}-with-cassandra
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -248,6 +260,8 @@ outputs:
 
   - name: {{ name }}-with-celery
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -263,6 +277,8 @@ outputs:
 
   - name: {{ name }}-with-cgroups
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -275,6 +291,8 @@ outputs:
 
   - name: {{ name }}-with-cloudant
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -289,6 +307,8 @@ outputs:
 
   - name: {{ name }}-with-crypto
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -301,6 +321,8 @@ outputs:
 
   - name: {{ name }}-with-dask
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -314,6 +336,8 @@ outputs:
 
   - name: {{ name }}-with-databricks
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -326,6 +350,8 @@ outputs:
 
   - name: {{ name }}-with-datadog
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -340,6 +366,8 @@ outputs:
   # py38
   #- name: {{ name }}-with-docker
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -353,6 +381,8 @@ outputs:
 
   - name: {{ name }}-with-druid
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -367,6 +397,8 @@ outputs:
   # for py38
   #- name: {{ name }}-with-elasticsearch
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -381,6 +413,8 @@ outputs:
   # watchtower
   - name: {{ name }}-with-emr
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -393,6 +427,8 @@ outputs:
 
   - name: {{ name }}-with-flask_oauth
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -408,10 +444,11 @@ outputs:
  # google-cloud-secret-manager does not have a feedstock
  # google-cloud-speech does not have a feedstock
  # - name: {{ name }}-with-gcp
- #   build:
- #     skip: true  # [py!=38]
  #   requirements:
+ #     host:
+ #       - python
  #     run:
+ #       - python
  #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
  #       - pyopenssl
  #       - google-api-python-client >=1.6.0,<2.0.0
@@ -434,6 +471,8 @@ outputs:
 
   - name: {{ name }}-with-grpc
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -447,6 +486,8 @@ outputs:
 
   - name: {{ name }}-with-hashicorp
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -460,6 +501,8 @@ outputs:
   # Need a snakebite-py3 recipe
   #- name: {{ name }}-with-hdfs
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -471,6 +514,8 @@ outputs:
 
   - name: {{ name }}-with-hive
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -485,6 +530,8 @@ outputs:
   # note: upstream pin jpype1==0.7.1 was not built on conda-forge
   #- name: {{ name }}-with-jdbc
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -497,6 +544,8 @@ outputs:
 
   - name: {{ name }}-with-jenkins
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -509,6 +558,8 @@ outputs:
 
   - name: {{ name }}-with-jira
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -523,6 +574,8 @@ outputs:
   # and hasn't been updated in 4 years
   #- name: {{ name }}-with-kerberos
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -538,6 +591,8 @@ outputs:
 
   - name: {{ name }}-with-kubernetes
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -551,6 +606,8 @@ outputs:
 
   - name: {{ name }}-with-ldap
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -563,6 +620,8 @@ outputs:
 
   - name: {{ name }}-with-mongo
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -578,6 +637,8 @@ outputs:
   # newer builds are not getting merged
   #- name: {{ name }}-with-mssql
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -591,6 +652,8 @@ outputs:
   # note: the older version of mysqlclient pinned here is not available for py38
   #- name: {{ name }}-with-mysql
   #  requirements:
+  #    host:
+  #      - python
   #    run:
   #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -603,6 +666,8 @@ outputs:
 
   - name: {{ name }}-with-oracle
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -616,6 +681,8 @@ outputs:
 
   - name: {{ name }}-with-pagerduty
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -627,6 +694,8 @@ outputs:
 
   - name: {{ name }}-with-papermill
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -642,6 +711,8 @@ outputs:
 
   - name: {{ name }}-with-password
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -655,10 +726,11 @@ outputs:
 
   # no pinotdb feedstock
   # - name: {{ name }}-with-pinot
-  #  build:
-  #    skip: true  # [py!=38]
   #   requirements:
+  #     host:
+  #       - python
   #     run:
+  #       - python
   #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #       - pinotdb 0.1.1
   #  test:
@@ -669,6 +741,8 @@ outputs:
 
   - name: {{ name }}-with-postgres
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -681,10 +755,11 @@ outputs:
 
   # not presto-python-client feedstock
   # - name: {{ name }}-with-presto
-  #  build:
-  #    skip: true  # [py!=38]
   #   requirements:
+  #     host:
+  #       - python
   #     run:
+  #       - python
   #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #       - presto-python-client >=0.7.0,<0.8
   #  test:
@@ -695,6 +770,8 @@ outputs:
 
   - name: {{ name }}-with-qds
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -707,6 +784,8 @@ outputs:
 
   - name: {{ name }}-with-rabbitmq
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -718,6 +797,8 @@ outputs:
 
   - name: {{ name }}-with-redis
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -730,6 +811,8 @@ outputs:
 
   - name: {{ name }}-with-salesforce
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -742,6 +825,8 @@ outputs:
 
   - name: {{ name }}-with-samba
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -754,6 +839,8 @@ outputs:
 
   - name: {{ name }}-with-segment
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -766,6 +853,8 @@ outputs:
 
   - name: {{ name }}-with-sendgrid
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -778,6 +867,8 @@ outputs:
 
   - name: {{ name }}-with-sentry
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -791,6 +882,8 @@ outputs:
 
   - name: {{ name }}-with-slack
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -803,6 +896,8 @@ outputs:
 
   - name: {{ name }}-with-snowflake
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -816,6 +911,8 @@ outputs:
 
   - name: {{ name }}-with-ssh
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -831,6 +928,8 @@ outputs:
 
   - name: {{ name }}-with-statsd
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -842,6 +941,8 @@ outputs:
 
   - name: {{ name }}-with-vertica
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -854,6 +955,8 @@ outputs:
 
   - name: {{ name }}-with-virtualenv
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -865,6 +968,8 @@ outputs:
 
   - name: {{ name }}-with-webhdfs
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -877,6 +982,8 @@ outputs:
 
   - name: {{ name }}-with-winrm
     requirements:
+      host:
+        - python
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
@@ -889,10 +996,11 @@ outputs:
 
   # no zdest feedstock
   # - name: {{ name }}-with-zendesk
-  #  build:
-  #    skip: true  # [py!=38]
   #   requirements:
+  #     host:
+  #       - python
   #     run:
+  #       - python
   #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #       - zdesk
   #  test:
