--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -702,7 +702,8 @@ outputs:
         - papermill[all] >=1.0.0
         - nteract-scrapbook[all] >=0.2.1
         - pyarrow <1.0.0
-        - black 20.8b0
+        # not on conda-forge
+        # - black 20.8b0
     test:
       imports:
         - airflow
