--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -790,7 +790,9 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - amqp <5.0.0
+        # this did not pass tests (No module named 'vine.five')
+        # - amqp <5.0.0
+        - amqp
     test:
       imports:
         - airflow
