--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,9 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/apache/incubator-{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # OSX uses md5 -r instead of md5sum
+    - 0001-osx-fix-md5.patch  # [osx]
 
 build:
   skip: true  # [win]
