--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,7 +76,8 @@ outputs:
         - python-slugify >=3.0.0,<5.0
         - requests >=2.20.0,<2.24.0
         - setproctitle >=1.1.8,<2
-        - sqlalchemy >=1.3,<2.0
+        # failing with 1.4 (No module named 'sqlalchemy.ext.declarative.clsregistry')
+        - sqlalchemy >=1.3,<1.4
         - sqlalchemy-jsonfield >=0.9,<1.0
         - tabulate >=0.7.5,<0.9
         - tenacity 4.12.0
