--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     - 0001-osx-fix-md5.patch  # [osx]
 
 build:
-  skip: true  # [win]
+  skip: true  # [win or py>=39]
   number: 0
 
 outputs:
@@ -274,7 +274,7 @@ outputs:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cloudpickle >=1.4.1,<1.5.0
         # dask stopped supporting python 3.6 in 2021.3.1 version
-        - dask <2021.3.1   # [py<37] 
+        - dask <2021.3.1   # [py<37]
         - dask >=2.9.0  # [py>=37]
         - distributed >=2.11.1,<2.20
     test:
