Skip -with-apache-beam for py39

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -196,6 +196,9 @@ outputs:
         - pip
 
   - name: {{ name }}-with-apache-beam
+    build:
+      # apache-beam doesn't support py39 yet
+      skip: true  # [py>=39]
     requirements:
       host:
         - python
