Skip -with-dask for py39

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -274,6 +274,9 @@ outputs:
         - pip
 
   - name: {{ name }}-with-dask
+    build:
+      # distributed<2.20 was not built for py39
+      skip: true  # [py>=39]
     requirements:
       host:
         - python
